# mips-sim

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  main.rs  processor.rs
src/processor/: alu.rs  buffer.rs  instruction.rs  memory.rs  program_counter.rs  registers.rs
tests/: instruction_load.rs
