[package]
name = "mips-sim"
version = "0.1.0"
edition = "2021"
authors = ["Akari202 <akaritwo0two@gmail.com"]
repository = "https://github.com/Akari202/mips-sim"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
num = "0.4.2"
num-derive = "0.4.2"
num-traits = "0.2.18"
log = "0.4.21"
pretty_env_logger = "0.5.0"
text_io = "0.1.12"

[lib]
name = "mips_sim"

[[test]]
name = "instruction_load"

